# clinprog-bench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  DATA_CARD.md  LICENSE  README.md  croissant.json  pyproject.toml
.claude/logs/: session-20260426-0e2ef805.md  session-20260426-48cb157c.md  session-20260426-52a4693f.md  session-20260426-55453115.md  session-20260426-7876073a.md  session-20260426-a938d03f.md  session-20260426-dbd92ff9.md  session-20260427-0eefe256.md  session-20260427-eadde870.md
docs/: ANNOTATION_GUIDE.md  Review_Panel_Email.md  audit-log.md  upstream_missing_fixtures_issue.md
docs/leaderboard/: index.html  results-claude-sonnet-4-5-20260427-no-fixtures.json  results-deepseek-chat-20260427.json  results-glm-4.5-20260427.json
fixtures/: NOTICE.md
fixtures/03_raw_data/: create_missing_raw_data.R
fixtures/05_adam/: define.xml
gold/: manifest.json
gold/T1.1.sdtm_ae_gen.001/: expected_output.sas
gold/T1.1.sdtm_cm_gen.002/: expected_output.sas
gold/T1.1.sdtm_dm_gen.001/: expected_output.sas
gold/T1.1.sdtm_ds_gen.003/: expected_output.sas
gold/T1.1.sdtm_ex_gen.004/: expected_output.sas
gold/T1.1.sdtm_lb_gen.001/: expected_output.sas
gold/T1.1.sdtm_mh_gen.005/: expected_output.sas
gold/T1.1.sdtm_qs_gen.006/: expected_output.sas
gold/T1.1.sdtm_relrec_gen.010/: expected_output.sas
gold/T1.1.sdtm_sc_gen.007/: expected_output.sas
gold/T1.1.sdtm_se_gen.009/: expected_output.sas
paper/: Makefile  README.md  main.aux  main.blg  main.out  main.tex  refs.bib
paper/arxiv/: main.bbl  main.tex
review_package/: README.md  audit-log.md
scripts/: assign_difficulty_tags.py  build_T1.py  build_T2.py  build_T3.py  build_T4.py  build_T5.py  build_supplementary.py  execute_gold.py  fix_gold_sas.py  leakage_audit.py  run_llm_baseline.py
tasks/: _schema.json
temp/: exec_T1.1.sdtm_ae_gen.001.sas  exec_T1.1.sdtm_dm_gen.001.sas  exec_T1.1.sdtm_lb_gen.001.sas  exec_T1.1.sdtm_vs_gen.001.sas  exec_T1.2.adam_adadas_gen.001.R  exec_T1.2.adam_adae_gen.001.R  exec_T1.2.adam_adsl_gen.001.R
tests/: test_schema.py
(+1023 files in other folders)
