[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "clinprog-bench"
version = "0.1.0"
description = "Benchmark for clinical programming tasks"
readme = "README.md"
license = { text = "Apache-2.0 AND CC-BY-4.0" }
requires-python = ">=3.11"
authors = [
    { name = "Yanming Yu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "pyyaml==6.0.2",
    "rich==13.9.4",
]

[project.scripts]
clinprog-bench = "clinprog_bench.cli:main"

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "ruff==0.11.5",
    "black==25.1.0",
    "mypy==1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clinprog_bench"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinprog_bench"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_T*.py" = ["N803", "N806"]  # CDISC domain/dataset names are uppercase by convention

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
